fix: align --slider-value-width to be visible all values of the input when editing

--- a/packages/uhk-web/src/app/components/add-on/add-on.component.scss
+++ b/packages/uhk-web/src/app/components/add-on/add-on.component.scss
@@ -1,3 +1,3 @@
 :host {
-    --slider-value-width: 35px;
+    --slider-value-width: 50px;
 }
